[project]
name = "pilot-wip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "numpy==1.22.0",
    "pandas==1.4.1",
    "numba==0.62.1",
    "matplotlib==3.8.0",
    "networkx==3.4.1",
    "scikit-learn>=1.0,<1.3",
    "scipy>=1.7,<1.10",
    "seaborn>=0.13.2",
    "ucimlrepo",
    "xgboost",
    "retry",
    "dataframe-image",
    "click",
    "pybind11",
    "tabulate",
    "ipython>=8.37.0",
]
